Update and rename README.txt to README.html

--- a/README.html
+++ b/README.html
@@ -1,6 +1,6 @@
-라라벨 5.8로 만든 미니 홈페이지
+라라벨 5.8로 만든 미니 홈페이지<br><br>
 
-영상 링크 >>>> https://youtu.be/O-ogkhPkErI
+영상 링크 >>>> <a href = "https://youtu.be/O-ogkhPkErI" target = "_blank"> https://youtu.be/O-ogkhPkErI</a><br><br>
 
 기능
 1. 아이디 등록
